Temporary Folder/SerialOutput.txt
/Users/gregoryhulette/Documents/GitHub/Arduino-Code/Holo_Projectors/HP_REELTWO_TEST/HP_REELTWO_TEST/HP_REELTWO_TEST.ino: In function 'void loop()':
/Users/gregoryhulette/Documents/GitHub/Arduino-Code/Holo_Projectors/HP_REELTWO_TEST/HP_REELTWO_TEST/HP_REELTWO_TEST.ino:1620:60: error: no matching function for call to 'CommandEvent::process(String&)'
                   CommandEvent::process(HPFullStringCommand);
                                                            ^
In file included from /Users/gregoryhulette/Documents/GitHub/Arduino-Code/libraries/Reeltwo-master/src/dome/HoloLights.h:8,
                 from /Users/gregoryhulette/Documents/GitHub/Arduino-Code/Holo_Projectors/HP_REELTWO_TEST/HP_REELTWO_TEST/HP_REELTWO_TEST.ino:51:
/Users/gregoryhulette/Documents/GitHub/Arduino-Code/libraries/Reeltwo-master/src/core/CommandEvent.h:33:14: note: candidate: 'static void CommandEvent::process(char*)'
  static void process(char* cmd)
              ^~~~~~~
/Users/gregoryhulette/Documents/GitHub/Arduino-Code/libraries/Reeltwo-master/src/core/CommandEvent.h:33:14: note:   no known conversion for argument 1 from 'String' to 'char*'
/Users/gregoryhulette/Documents/GitHub/Arduino-Code/libraries/Reeltwo-master/src/core/CommandEvent.h:54:17: note: candidate: 'static void CommandEvent::process(const char*)'
     static void process(const char* cmd)
                 ^~~~~~~
/Users/gregoryhulette/Documents/GitHub/Arduino-Code/libraries/Reeltwo-master/src/core/CommandEvent.h:54:17: note:   no known conversion for argument 1 from 'String' to 'const char*'
/Users/gregoryhulette/Documents/GitHub/Arduino-Code/libraries/Reeltwo-master/src/core/CommandEvent.h:68:14: note: candidate: 'static void CommandEvent::process(PROGMEMString)'
  static void process(PROGMEMString pcmd)
              ^~~~~~~
/Users/gregoryhulette/Documents/GitHub/Arduino-Code/libraries/Reeltwo-master/src/core/CommandEvent.h:68:14: note:   no known conversion for argument 1 from 'String' to 'PROGMEMString' {aka 'const __FlashStringHelper*'}